--- a/package.json
+++ b/package.json
@@ -29,17 +29,22 @@
     "@azure-rest/ai-document-intelligence": "^1.1.0",
     "@azure/ai-form-recognizer": "^5.1.0",
     "@azure/openai": "^1.0.0-beta.12",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "express-rate-limit": "^8.1.0",
+    "form-data": "^4.0.4",
     "helmet": "^8.1.0",
+    "i18n-iso-countries": "^7.10.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "openai": "^5.16.0",
     "pdf-lib": "^1.17.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
